@@ -8,4 +8,6 @@ lib/Log/Dispatch/Win32EventLog.pm
 t/01-basic.t
 t/02-register.t
 t/03-log4perl.t
+t/03-log4perl-log4j.t
 t/04-invalid_log.t
+t/05-backslashes.t
