@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name: Log-Dispatch-Win32EventLog
-version: 0.11_04
+version: 0.11_05
 author:
   - ! >-
     Robert Rothenberg <rrwo at cpan.org>, Arthur Bergman <abergman at cpan.org>
@@ -15,7 +15,7 @@ requires:
   base: 0
   perl: 5.005
 recommends:
-  Log::Log4perl: 0
+  Log::Log4perl: 0.28
   Win32::EventLog::Message: 0
 build_requires:
   Test::More: 0
@@ -23,5 +23,5 @@ build_requires:
 provides:
   Log::Dispatch::Win32EventLog:
     file: lib/Log/Dispatch/Win32EventLog.pm
-    version: 0.11_04
+    version: 0.11_05
 generated_by: Module::Build version 0.25_02
